--- a/public/popup.html
+++ b/public/popup.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8"/>
     <title>Minha Extensão</title>
     <script src="popup.js"></script>
+    <link rel="stylesheet" href="../src/popup.css">
+    <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-    <h1>Bem-vindo à Minha Extensão</h1>
+    <h1>Bem-vindo Ao ResumoGpt</h1>
     <button id="myButton">Clique aqui</button>
     <p id="pageTitle">Nada ainda</p>
   </body>
