Add summary fetch via ChatGPT

--- a/public/popup.html
+++ b/public/popup.html
@@ -11,5 +11,6 @@
     <h1>Bem-vindo Ao ResumoGpt</h1>
     <button id="myButton">Clique aqui</button>
     <p id="pageTitle">Nada ainda</p>
+    <p id="summary"></p>
   </body>
 </html>
