Add config module for API base URL

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,6 +9,7 @@
   <h1>Dashboard</h1>
   <div id="info"></div>
   <button id="logout">Logout</button>
+  <script src="config.js"></script>
   <script src="dashboard.js"></script>
 </body>
 </html>
