--- a/public/popup.html
+++ b/public/popup.html
@@ -20,6 +20,7 @@
     <input id="register-password" type="password" placeholder="Password">
     <button id="register-btn">Register</button>
   </div>
+  <script src="config.js"></script>
   <script src="popup.js"></script>
-</body>
+  </body>
 </html>
