Toggle registration form

--- a/public/popup.html
+++ b/public/popup.html
@@ -12,13 +12,15 @@
     <input id="login-email" type="email" placeholder="Email">
     <input id="login-password" type="password" placeholder="Password">
     <button id="login-btn">Login</button>
+    <a id="show-register" href="#">Cadastre-se</a>
   </div>
-  <div id="register">
+  <div id="register" style="display:none;">
     <h1>Register</h1>
     <input id="register-username" type="text" placeholder="Username">
     <input id="register-email" type="email" placeholder="Email">
     <input id="register-password" type="password" placeholder="Password">
     <button id="register-btn">Register</button>
+    <a id="back-to-login" href="#">Voltar ao login</a>
   </div>
   <script src="config.js"></script>
   <script src="popup.js"></script>
