feat: add api token save on dashboard

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,6 +8,9 @@
 <body>
   <h1>Dashboard</h1>
   <div id="info"></div>
+  <input id="api-key" type="text" placeholder="API Key">
+  <button id="save-api-key">Salvar API Key</button>
+  <div id="api-message"></div>
   <button id="logout">Logout</button>
   <script src="config.js"></script>
   <script src="dashboard.js"></script>
