--- a/public/popup.html
+++ b/public/popup.html
@@ -1,28 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8" />
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="message"></div>
-  <div id="login">
-    <h1>Login</h1>
-    <input id="login-email" type="email" placeholder="Email">
-    <input id="login-password" type="password" placeholder="Password">
-    <button id="login-btn">Login</button>
-    <button id="show-register">Cadastre-se</button>
-  </div>
-  <div id="register" style="display:none;">
-    <h1>Register</h1>
-    <input id="register-username" type="text" placeholder="Username">
-    <input id="register-email" type="email" placeholder="Email">
-    <input id="register-password" type="password" placeholder="Password">
-    <button id="register-btn">Register</button>
-    <button id="back-to-login">Voltar ao login</button>
-  </div>
-  <script src="config.js"></script>
-  <script src="popup.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Popup</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/popup/main.ts"></script>
   </body>
 </html>
