--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/dashboard/main.ts"></script>
+    <script src="main.js"></script>
   </body>
 </html>
