--- a/public/popup.html
+++ b/public/popup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="/config.js"></script>
+  <script type="module" src="./config.js"></script>
   <script type="module" src="/src/popup/main.ts"></script>
   </body>
 </html>
