Add Ready page with navigation

--- a/frontend/public/ready.html
+++ b/frontend/public/ready.html
@@ -25,6 +25,8 @@
   </style>
 </head>
 <body>
-  <h1>Pronto! Agora é só resumir as coisas 😎</h1>
+  <div id="app"></div>
+  <script type="module" src="./config.js"></script>
+  <script type="module" src="/src/ready/main.ts"></script>
 </body>
 </html>
