refactor frontend to spa

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Popup</title>
+  <title>ResumoGPT</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div id="app"></div>
   <script type="module" src="./config.js"></script>
-  <script type="module" src="/src/popup/main.ts"></script>
-  </body>
+  <script type="module" src="/src/main.ts"></script>
+</body>
 </html>
+
